--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
 		"postcss-object-fit-images": "^1.1.2",
 		"postcss-short": "^5.0.0",
 		"postcss-sorting": "^5.0.0",
-		"sort-css-media-queries": "1.4.3",
-		"postcss-will-change": "3.0.0"
+		"sort-css-media-queries": "^1.4.3",
+		"postcss-will-change": "^3.0.0",
+		"postcss-px-to-viewport": "^1.1.1"
 	},
 	"dependencies": {
 		"babel-core": "^6.26.3",
