--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
 	},
 	"browserslist": [
 		">0.25%",
-		"not ie 11",
-		"not op_mini all"
+		"last 2 versions",
+		"Android >= 4",
+		"IE 11",
+		"not IE < 11"
 	],
 	"editorconfig-cli": [
 		"./static/pug/**/*.pug",
